objects/ContactContactRelation.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ngotv_Description__c</fullName>
        <formula>Contact.Account.Name&amp;&quot; is &quot;&amp;RelatedContact.Account.Name &amp;&quot;&apos;s &quot;&amp; PartyRoleRelation.RoleName&amp;  BR()  &amp;
BR()  &amp;
RelatedContact.Account.Name&amp;&quot; is &quot;&amp;Contact.Account.Name &amp;&quot;&apos;s &quot;&amp; PartyRoleRelation.RelatedRoleName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ngotv_Included_In_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked the &quot;Contact&quot; and &quot;Related Contact&quot; are in the same Party Relationship Group.</inlineHelpText>
        <label>Included In Group</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>